--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -11,6 +11,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th{
             border: 1px solid black;
@@ -23,9 +24,16 @@
             background-color: lightgray;
         }
         thead, tfoot{
-            background-color: gray;
+            background-color: 383838;
             color: white;
         }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
         tbody > tr:nth-child(odd) {
             background-color: lightgray;
         }
@@ -171,6 +179,12 @@
                     <td class="num"><strong>203.062.512</strong></td>
                 </tr>
             </tfoot>
-        </table>      
+        </table>  
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ipsum necessitatibus aliquid dolores sint facere quod earum commodi ea totam architecto quis quos omnis, vero assumenda reprehenderit quam laudantium hic? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero fuga rem obcaecati, consequuntur maxime eos sunt, minus odit laborum nemo in corporis magni quas eius provident culpa consectetur consequatur mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae eius impedit nesciunt, tempora velit dolorum sit dicta dolorem soluta placeat odit, delectus corrupti incidunt amet provident, maiores mollitia quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora corporis culpa veniam nulla voluptatum! Illum inventore iure rerum. Nemo aut consectetur impedit quas consequuntur. Illo veniam necessitatibus numquam ab error?</p> 
+        
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ipsum necessitatibus aliquid dolores sint facere quod earum commodi ea totam architecto quis quos omnis, vero assumenda reprehenderit quam laudantium hic? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero fuga rem obcaecati, consequuntur maxime eos sunt, minus odit laborum nemo in corporis magni quas eius provident culpa consectetur consequatur mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae eius impedit nesciunt, tempora velit dolorum sit dicta dolorem soluta placeat odit, delectus corrupti incidunt amet provident, maiores mollitia quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora corporis culpa veniam nulla voluptatum! Illum inventore iure rerum. Nemo aut consectetur impedit quas consequuntur. Illo veniam necessitatibus numquam ab error?</p>   
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ipsum necessitatibus aliquid dolores sint facere quod earum commodi ea totam architecto quis quos omnis, vero assumenda reprehenderit quam laudantium hic? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero fuga rem obcaecati, consequuntur maxime eos sunt, minus odit laborum nemo in corporis magni quas eius provident culpa consectetur consequatur mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae eius impedit nesciunt, tempora velit dolorum sit dicta dolorem soluta placeat odit, delectus corrupti incidunt amet provident, maiores mollitia quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora corporis culpa veniam nulla voluptatum! Illum inventore iure rerum. Nemo aut consectetur impedit quas consequuntur. Illo veniam necessitatibus numquam ab error?</p>   
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ipsum necessitatibus aliquid dolores sint facere quod earum commodi ea totam architecto quis quos omnis, vero assumenda reprehenderit quam laudantium hic? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero fuga rem obcaecati, consequuntur maxime eos sunt, minus odit laborum nemo in corporis magni quas eius provident culpa consectetur consequatur mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae eius impedit nesciunt, tempora velit dolorum sit dicta dolorem soluta placeat odit, delectus corrupti incidunt amet provident, maiores mollitia quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora corporis culpa veniam nulla voluptatum! Illum inventore iure rerum. Nemo aut consectetur impedit quas consequuntur. Illo veniam necessitatibus numquam ab error?</p>   
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ipsum necessitatibus aliquid dolores sint facere quod earum commodi ea totam architecto quis quos omnis, vero assumenda reprehenderit quam laudantium hic? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero fuga rem obcaecati, consequuntur maxime eos sunt, minus odit laborum nemo in corporis magni quas eius provident culpa consectetur consequatur mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae eius impedit nesciunt, tempora velit dolorum sit dicta dolorem soluta placeat odit, delectus corrupti incidunt amet provident, maiores mollitia quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora corporis culpa veniam nulla voluptatum! Illum inventore iure rerum. Nemo aut consectetur impedit quas consequuntur. Illo veniam necessitatibus numquam ab error?</p>   
 </body>
 </html>
