--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -19,7 +19,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda nam magnam repellendus esse blanditiis maxime alias ad quis! Omnis eaque dicta doloribus reprehenderit eius non ea et quis sunt?  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, temporibus, atque hic dolorem cumque distinctio odio eveniet harum totam itaque cum placeat. Vitae dicta et neque non, autem quam nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vel, non quibusdam optio iste aliquid sit iure neque atque repellat eligendi temporibus libero cum quisquam dolorum alias, aliquam saepe!</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda nam magnam repellendus esse blanditiis maxime alias ad quis! Omnis eaque dicta doloribus reprehenderit eius non ea et quis sunt?  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, temporibus, atque hic dolorem cumque distinctio odio eveniet harum totam itaque cum placeat. Vitae dicta et neque non, autem quam nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vel, non quibusdam optio iste aliquid sit iure neque atque repellat eligendi temporibus libero cum quisquam dolorum alias, aliquam saepe!</p>
 </body>
