--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt odio debitis unde? Omnis provident aperiam quibusdam, consectetur maiores ea totam blanditiis obcaecati distinctio ipsam? Nam labore reprehenderit perspiciatis porro molestias. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid tempore exercitationem consequuntur! Enim nihil asperiores nesciunt, voluptatem quo dignissimos itaque aut molestiae saepe explicabo. Est reiciendis blanditiis repellendus cum qui! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident laudantium dolorum corrupti minus suscipit tenetur magnam. Possimus minima unde, rerum dolore, animi, eligendi consequuntur quo in suscipit eos consequatur labore.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, odio modi. In debitis natus ea non repellendus rerum consequatur cum similique eum autem facilis deserunt dicta, quam molestias, nihil commodi.</p><img src='imagens/images.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
